# iot-dashboard

./: .gitignore  pyproject.toml
iot_dashboard/: README.md  app.py  requirements.txt  setup.py
iot_dashboard/database/: db.py
iot_dashboard/src/: app.py
iot_dashboard/src/influxdb/: __init__.py
iot_dashboard/src/mqtt/: __init__.py
iot_dashboard/src/telegraf/: telegraf.conf
iot_dashboard/src/templates/: dashboard.html  index.html
