[tool.poetry]
name = "iot-dashboard"
version = "0.1.0"
description = ""
authors = ["Tom Nordal <tnordal@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.1.0"
paho-mqtt = "^2.1.0"
influxdb-client = "^1.48.0"
plotly = "^5.24.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
